Convert SegmentRecordMaper to a record